# EntityResolution

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: entity_resolution_matching_splink.py  nc_county_auto_processor.py
entityresolver/cleaning/: __init__.py  identity.py  normalizer.py  rule_loader.py
entityresolver/connectors/: __init__.py  http_connector.py
entityresolver/download/: __init__.py  downloader.py
entityresolver/ingestion/: __init__.py  manager.py  manifest.py
entityresolver/mapping/: __init__.py  loader.py  mapper.py
entityresolver/parsing/: __init__.py  csv_handler.py  detector.py  dispatcher.py  json_handler.py  loader.py  parser.py  zip_handler.py
entityresolver/schema/: __init__.py  diff.py  extractor.py  mapper.py  registry.py
entityresolver/sources/: __init__.py  api_source.py  base.py  http_file_source.py
entityresolver/utils/: __init__.py  config.py  fs.py
scripts/: test_api_download.py  test_download.py  test_http_download.py
tests/: test_downloader.py  test_http_connector.py  test_ingestion_manager.py  test_manifest.py
