[project]
name = "entityresolver"
version = "0.1.0"
description = "Entity resolution utilities"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["entityresolver*"]

[tool.pytest.ini_options]
testpaths = ["tests"]